--- a/main.css
+++ b/main.css
@@ -1,45 +1,178 @@
+
 /* width 1280 px */
-
 body {
-    background-color: black;
-}
-
-.main_menu ul > li, a, .social_icons ul {
-  display: inline;
-  text-decoration: none;
-  color: white;
-}
-
-.main_menu ul >li {
-    word-spacing: 20px;
+  background-color: black;
+  width: 1280px;
 }
 
 .header {
-  text-align:center;
+  padding-top: 20px;
+}
+
+
+.main_menu ul>li,
+a,
+.social_icons ul
+ {
+  display: inline;
+  text-decoration: none;
+  font-family: 'Inconsolata', monospace;
+  color: white;
+  font-size: 20px;
+}
+
+
+.main_menu ul li.login_in_link a {
+  font-size: 15px;
+  text-decoration:underline;
+  border-style: none;
+  padding: 7px;
+  color: rgb(66, 255, 113);
+}
+
+hr {
+  border-width: 2px;
+  border-style: solid;
+  color: white;
+}
+
+.main_menu ul>li a {
+  margin: 20px;
+  padding: 20px;
+  border-style: solid;
+  border-color: rgb(66, 255, 113);
+  color: rgb(66, 255, 113);
+}
+
+.header {
+  text-align: center;
 }
 
 .menu_buttons a {
   color: white;
 }
 
-h1, h2, h3, h4 {
-    color: white;
-    text-align: center;
-    word-spacing: 7px;
+h1,
+h2,
+h3
+{
+  color: white;
+  text-align: center;
+  word-spacing: 9px;
+    letter-spacing: 10px;
+  font-family: 'Orbitron', sans-serif;
+  margin: 15px;
 }
 
-p {
-  font-family: ;
+h1 {
+  font-size: 60px;
+  font-style: bold;
+  margin-top: 50px;
+
+}
+
+h2 {
+  font-size: 40px;
+}
+
+h3 {
+  font-size: 28px;
+}
+
+h4, h5 {
   color: white;
-  text-align:center;
+  text-align: center;
+  word-spacing: 7px;
+  font-family: 'Orbitron', sans-serif;
+  font-size: 20px;
+}
+
+
+blockquote p {
+  font-family: 'Inconsolata', monospace;
+  color: white;
+  text-align: center;
+  line-height: 2.3;
+  margin-left: 5px;
+}
+
+.container, .subscribe{
+  display: inline-block;
+  font-family: 'Inconsolata', monospace;
+  color: black;
+  text-align: center;
   line-height: 1.8
 }
 
-  .prices_txt ul > li {
+
+.container h4 {
+  margin-left: 180px;
+  margin-right: 60px;
+}
+
+
+.prices_txt ul>li {
+  text-align: center;
+  color: white;
+  font-family: 'Inconsolata', monospace;
+  font-size: 20px;
+  line-height: 40px;
+}
+
+.prices_list  ul li{
+  display: inline-block;
+  padding: 20px;
+  border: 3px solid white;
+  margin: 30px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+}
+
+.prices_list a {
+  display: inline-block;
+  border: 3px solid white;
+  margin: 0px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.note p {
+  color: white;
   text-align:center;
+  margin-top: 0px;
+  font-family: 'Inconsolata', monospace;
+  font-size: 10px;
+  font-style:italic;
+}
+
+.prices_list ul {
+  text-align: center;
+}
+
+.newsletter {
+  display: inline-block;
+
+}
+
+.footer p {
+  font-size: 12px;
   color: white;
 
 }
+
+.footer ul{
+  display: inline-block;
+  margin-top: 0px;
+  margin-right: 40px;
+  margin-bottom: 40px;
+  margin-left: 40px;
+  text-align: center;
+  line-height: 1.5;
+}
+
+
 
 
 
